Download: Fix misaligned back arrow

--- a/_sass/layouts/downloads.scss
+++ b/_sass/layouts/downloads.scss
@@ -215,7 +215,7 @@
     vertical-align: middle;
     position: relative;
     width: 100%;
-    margin-top: 1.25em;
+    margin-top: 1.75em;
 
     img {
         position: absolute;
